tests/baselines/reference/enumErrors.errors.txt
==== tests/cases/compiler/enumErrors.ts (15 errors) ====
    // Enum named with PredefinedTypes
    enum any { }
         ~~~
!!! enumErrors.ts(2,6): error TS1059: Enum name cannot be 'any'.
         ~~~
!!! enumErrors.ts(2,6): error TS2000: Duplicate identifier 'any'.
    enum number { }
         ~~~~~~
!!! enumErrors.ts(3,6): error TS1059: Enum name cannot be 'number'.
         ~~~~~~
!!! enumErrors.ts(3,6): error TS2000: Duplicate identifier 'number'.
    enum string { }
         ~~~~~~
!!! enumErrors.ts(4,6): error TS1059: Enum name cannot be 'string'.
         ~~~~~~
!!! enumErrors.ts(4,6): error TS2000: Duplicate identifier 'string'.
    enum boolean { }
         ~~~~~~~
!!! enumErrors.ts(5,6): error TS1059: Enum name cannot be 'boolean'.
         ~~~~~~~
!!! enumErrors.ts(5,6): error TS2000: Duplicate identifier 'boolean'.
    
    // Enum with computed member initializer of type Number
    enum E5 {
        C = new Number(30)
        ~~~~~~~~~~~~~~~~~~
!!! enumErrors.ts(9,5): error TS2011: Type 'Number' is not assignable to type 'E5'.
    }
    
    enum E9 {
        A,
        B = A
    }
    
    //Enum with computed member intializer of different enum type
    // Bug 707850: This should be allowed
    enum E10 {
        A = E9.A,
        ~~~~~~~~
!!! enumErrors.ts(20,5): error TS2011: Type 'E9' is not assignable to type 'E10'.
        B = E9.B
        ~~~~~~~~
!!! enumErrors.ts(21,5): error TS2011: Type 'E9' is not assignable to type 'E10'.
    }
    
    // Enum with computed member intializer of other types
    enum E11 {
        A = '',
        ~~~~~~
!!! enumErrors.ts(26,5): error TS2011: Type 'string' is not assignable to type 'E11'.
        B = new Date(),
        ~~~~~~~~~~~~~~
!!! enumErrors.ts(27,5): error TS2011: Type 'Date' is not assignable to type 'E11'.
        C = window,
            ~~~~~~
!!! enumErrors.ts(28,9): error TS2095: Cannot find name 'window'.
        D = {}
        ~~~~~~
!!! enumErrors.ts(29,5): error TS2011: Type '{}' is not assignable to type 'E11'.
    }
    